	ipmi-rmcpplus-util.c.  Removed ipmi-hmac.c, ipmi-hmac.h,
	ipmi-sha1.c, ipmi-sha1.h.  Added libgcrypt into build.
	
	MISC
	
	* freeipmi.spec.in: Add gcrypt dependencies.

------------------------------------------------------------
2005-12-09  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-rmcpplus.h, libfreeipmi/src/ipmi-rmcpplus.c
	(fill_rmcpplus_payload):  New function.
	
2005-12-05  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-rmcpplus-interface.h,
	libfreeipmi/src/ipmi-rmcpplus-interface.c
	(unassemble_ipmi_rmcpplus_pkt): Complete initial development of
	unassemble rmcpplus interface.
	
2005-12-02  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-rmcpplus.c (_construct_payload_special,
	fill_rmcpplus_hdr_session, assemble_ipmi_rmcpplus_pkt): Added more
	appropriate error checks.

	* libfreeipmi/src/ipmi-rmcpplus.c (_construct_payload_special):
	Fixed bug.

	* libfreeipmi/src/ipmi-rmcpplus-interface.c
	(assemble_ipmi_rmcpplus_pkt): Added more appropriate error checks.
	
2005-12-01  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-rmcpplus-util.h,
	libfreeipmi/src/ipmi-rmcpplus-util.c (ipmi_crypt_cipher_decrypt):
	New function.

	* libfreeipmi/src/ipmi-rmcpplus-util.c (_cipher_crypt): New function.

	* libfreeipmi/src/ipmi-rmcpplus-util.c
	(ipmi_crypt_cipher_encrypt): Use new common _cipher_crypt
	function.

2005-11-30  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-rmcpplus-util.c
	(ipmi_crypt_cipher_encrypt): Added proper cipher blocklength check
	for AES.
	
2005-11-23  Albert Chu <chu11@llnl.gov>

	IPMI 2.0 code cleanup and re-organization

	* libfreeipmi/src/ipmi-lanplus-sessions.h,
	libfreeipmi-src/ipmi-lanplus-sessions.c: Removed files.

	* libfreeipmi/src/ipmi-rmcpplus.h,
	libfreeipmi/src/ipmi-rmcpplus.c,libfreeipmi/src/ipmi-rmcpplus-interface.h,
	libfreeipmi/src/ipmi-rmcpplus-interface.c,
	libfreeipmi/src/ipmi-rmcpplus-util.h,
	libfreeipmi/src/ipmi-rmcpplus-util.c : New files.
